@@ -35,6 +35,7 @@ export(outputInt)
 export(pvalueFormatter)
 export(splitLines4Table)
 export(transitionPlot)
+export(txtMergeLines)
 import(grid)
 import(lattice)
 importFrom(Hmisc,"label<-")
