@@ -51,8 +51,8 @@ htmlTable(
   caption  = "Continuous & binary variables",
   n.rgroup = c(2,1), rgroup=c("Gas", "Weight"),
   n.cgroup = c(2,1),
-  cgroup   = c(splitLines4Table("Results",
-                                sprintf("n=%d", NROW(mtcars)), html=TRUE),
+  cgroup   = c(txtMergeLines("Results",
+                             sprintf("n=%d", NROW(mtcars)), html=TRUE),
                ""),
   headings =c(sprintf("%s (SD)", levels(mtcars$am)), "Units"),
   rowlabel = "Variable",
@@ -64,8 +64,8 @@ htmlTable(
   caption  = "Continuous & binary variables",
   n.rgroup = c(2,1), rgroup=c("Gas", "Weight"),
   n.cgroup = c(2,1),
-  cgroup   = c(splitLines4Table("Results",
-                                sprintf("n=%d", NROW(mtcars)), html=TRUE),
+  cgroup   = c(txtMergeLines("Results",
+                             sprintf("n=%d", NROW(mtcars)), html=TRUE),
                ""),
   headings =c(sprintf("%s (SD)", levels(mtcars$am)), "Units"),
   rowlabel = "Variable",
@@ -116,19 +116,19 @@ n.cgroup <- c(1, 3)
 colnames(output_data) <-
   c(paste0('Total<br />\n',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', nrow(data),
+           'n = ', nrow(data),
            '</span>'),
     paste0('Treated A<br />\n',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', sum(data$treat == 'Treatment A'),
+           'n = ', sum(data$treat == 'Treatment A'),
            '</span>'),
     paste0('Treatment B&Dagger;<br />\n',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', sum(data$treat == 'Treatment B'),
+           'n = ', sum(data$treat == 'Treatment B'),
            '</span>'),
     paste0('Placebo<br />',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', sum(data$treat == 'Placebo'),
+           'n = ', sum(data$treat == 'Placebo'),
            '</span>'))
 
 
@@ -146,14 +146,14 @@ htmlTable(output_data, align = 'rccc',
           altcol = c('white','lightblue1'),
           tfoot = paste0(
             '<span style="font-size: .6em;">',
-              'Abbreviations:',
-              ' ECOG, Eastern Cooperative Oncology Group;',
-              ' PS, performance score',
+            'Abbreviations:',
+            ' ECOG, Eastern Cooperative Oncology Group;',
+            ' PS, performance score',
             '</span><br />\n',
             '<span style="font-size: .6em;">',
-              '<sup>&dagger;</sup>',
-              ' Note 1. Trial groups for a new wonder drug</span><br />\n',
+            '<sup>&dagger;</sup>',
+            ' Note 1. Trial groups for a new wonder drug</span><br />\n',
             '<span style="font-size: .6em;">',
-              '<sup>&Dagger;</sup>',
-              ' Note 2. Twice the dosage of treatment A',
+            '<sup>&Dagger;</sup>',
+            ' Note 2. Twice the dosage of treatment A',
             '</span>'))
