@@ -302,8 +302,8 @@ htmlTable(
   caption  = "Continuous & binary variables",
   n.rgroup = c(2,1), rgroup=c("Gas", "Weight"),
   n.cgroup = c(2,1),
-  cgroup   = c(splitLines4Table("Results",
-                                sprintf("n=\%d", NROW(mtcars)), html=TRUE),
+  cgroup   = c(txtMergeLines("Results",
+                             sprintf("n=\%d", NROW(mtcars)), html=TRUE),
                ""),
   headings =c(sprintf("\%s (SD)", levels(mtcars$am)), "Units"),
   rowlabel = "Variable",
@@ -315,8 +315,8 @@ htmlTable(
   caption  = "Continuous & binary variables",
   n.rgroup = c(2,1), rgroup=c("Gas", "Weight"),
   n.cgroup = c(2,1),
-  cgroup   = c(splitLines4Table("Results",
-                                sprintf("n=\%d", NROW(mtcars)), html=TRUE),
+  cgroup   = c(txtMergeLines("Results",
+                             sprintf("n=\%d", NROW(mtcars)), html=TRUE),
                ""),
   headings =c(sprintf("\%s (SD)", levels(mtcars$am)), "Units"),
   rowlabel = "Variable",
@@ -367,19 +367,19 @@ n.cgroup <- c(1, 3)
 colnames(output_data) <-
   c(paste0('Total<br />\\n',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', nrow(data),
+           'n = ', nrow(data),
            '</span>'),
     paste0('Treated A<br />\\n',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', sum(data$treat == 'Treatment A'),
+           'n = ', sum(data$treat == 'Treatment A'),
            '</span>'),
     paste0('Treatment B&Dagger;<br />\\n',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', sum(data$treat == 'Treatment B'),
+           'n = ', sum(data$treat == 'Treatment B'),
            '</span>'),
     paste0('Placebo<br />',
            '<span style="weight = normal; font-size: .6em;">',
-            'n = ', sum(data$treat == 'Placebo'),
+           'n = ', sum(data$treat == 'Placebo'),
            '</span>'))
 
 
@@ -397,21 +397,21 @@ htmlTable(output_data, align = 'rccc',
           altcol = c('white','lightblue1'),
           tfoot = paste0(
             '<span style="font-size: .6em;">',
-              'Abbreviations:',
-              ' ECOG, Eastern Cooperative Oncology Group;',
-              ' PS, performance score',
+            'Abbreviations:',
+            ' ECOG, Eastern Cooperative Oncology Group;',
+            ' PS, performance score',
             '</span><br />\\n',
             '<span style="font-size: .6em;">',
-              '<sup>&dagger;</sup>',
-              ' Note 1. Trial groups for a new wonder drug</span><br />\\n',
+            '<sup>&dagger;</sup>',
+            ' Note 1. Trial groups for a new wonder drug</span><br />\\n',
             '<span style="font-size: .6em;">',
-              '<sup>&Dagger;</sup>',
-              ' Note 2. Twice the dosage of treatment A',
+            '<sup>&Dagger;</sup>',
+            ' Note 2. Twice the dosage of treatment A',
             '</span>'))
 }
 \seealso{
 \code{\link{getDescriptionStatsBy}},
-\code{\link{mergeDesc}}, \code{\link{splitLines4Table}},
+\code{\link{mergeDesc}}, \code{\link{txtMergeLines}},
 \code{\link[Hmisc]{latex}}
 }
 
